// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HiddenCheckableInput renders as expected and sets the input role to value of the type prop by default 1`] = `
<styled.input
  aria-checked={true}
  checked={true}
  helpId="test-help"
  name="test-name"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="test-type"
  tabIndex={0}
  type="test-type"
  value="test-value"
/>
`;

exports[`HiddenCheckableInput sets the role if the prop is passed a value 1`] = `
<styled.input
  aria-checked={true}
  checked={true}
  helpId="test-help"
  name="test-name"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="test-role"
  tabIndex={0}
  type="test-type"
  value="test-value"
/>
`;
